# project_page_analyzer

./: Makefile  README.md  alembic.ini  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: a064d03ade00_.py  af809ebec33d_.py
migrations/versions/: 6cbf532203f5_init.py
page_analyzer/: app.py  db.py  queries.py
page_analyzer/db/: models.py  queries.py
page_analyzer/db_queries/: queries.py
page_analyzer/migrations/: env.py
page_analyzer/models/: queries.py
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
page_analyzer/tools/: page_tools.py
tools/: url_tools.py
