[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleх Bark <thrtth@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]
classifiers = [
  "Programming Language :: Python :: 3.11"
]
repository = "https://github.com/thrtth/python-project-83"

[tool.poetry.dependencies]
python = "^3.11.0"
flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
